--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.19.0",
     "history": "^4.10.1",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
